@@ -2,6 +2,9 @@
 tlst-new-task=New task
 tlst-toggle-gui=View tasks
 
+[mod-setting-name]
+tlst-new-task-on-confirm=Open new task window on confirm
+
 [gui]
 tlst-add-subtask=Add subtask
 tlst-add-to-top=Add to the top
