@@ -1,0 +1,8 @@
+data:extend({
+  {
+    type = "bool-setting",
+    name = "tlst-new-task-on-confirm",
+    setting_type = "runtime-per-user",
+    default_value = false,
+  },
+})
